--- a/partials/header.tpl.html
+++ b/partials/header.tpl.html
@@ -21,9 +21,8 @@
   <!-- Modernizr & Prefix Free (All other JS in footer) -->
   <script src="../components/prefix-free/prefixfree.min.js"></script>
   
-  <!-- Typekit -->
-<!--   <link rel="stylesheet" href="https://use.typekit.net/pzv0cne.css"> -->
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+  <!-- Fonts @todo: remove unused -->
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Playfair+Display:400,700,900" rel="stylesheet">
 
 
 
@@ -32,17 +31,18 @@
   
 	<div id="app" class="@@app_class"> 
 
-    <div class="toggle--wrapper">
-      <button type="button" role="button" aria-label="Toggle Navigation" class="menu--toggle" href="#"><span></span></button>
-    </div>
-
     <header class="header" id="header">
-      <h1 class="large">Menu</h1>
+      <div class="header--inner">
+        <div class="logo">
+          <p class="small">KVM</p>
+        </div>
+      </div>
+<!--       <h1 class="large">Menu</h1>
       <ul class="menu">
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portofolio</a></li>
         <li><a href="#contact">Contact</a></li>
-      </ul>
+      </ul> -->
     </header>
 
  
