--- a/assets/sass/modules/_buttons.scss
+++ b/assets/sass/modules/_buttons.scss
@@ -7,7 +7,8 @@ $btn: (
 
 
 .btn {
- 	height: map-get($btn, height);
-	padding: map-get($btn, padding);
+	text-transform: uppercase;
 	@include transition(background 200ms ease-in-out, color 200ms ease-in-out);
 }
+
+
