--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,16 @@ a:hover,a:focus {
 
 /* Navbar */
 
+.navbar > .container {
+/*  max-width: 1640px;
+*/  width: 100%;
+  padding-left: 50px;
+  padding-right: 50px;
+  -webkit-box-shadow: 0px 4px 16px -8px rgba(87,85,87,0.25);
+  -moz-box-shadow: 0px 4px 16px -8px rgba(87,85,87,0.25);
+  box-shadow: 0px 4px 16px -8px rgba(87,85,87,0.25);
+}
+
 .navbar-fixed-top .nav {
     padding: 15px 0;
 }
@@ -55,7 +65,7 @@ a:hover,a:focus {
 }
 
 .navbar-brand img{
-	max-height:50px;
+	max-height: 38px;
 }
 
 .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
@@ -68,7 +78,8 @@ a:hover,a:focus {
     }
 
     .navbar-fixed-top .navbar-brand {
-        padding: 15px 0;
+/*        padding: 15px 0;*/
+        padding: 7.5px 0;
     }
 }
 
@@ -88,6 +99,11 @@ a:hover,a:focus {
 
 .navbar-default .navbar-nav > li > a:hover {
     color: #555;
+}
+
+.navbar-nav > li > a {
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 
@@ -564,7 +580,7 @@ a:hover {
 a:hover:before {
   background-color: #f6e4da;
   height: 8px;
-  transform: translateY(0px);
+  transform: translateY(-4px);
   -webkit-transition: all 200ms ease-in-out;
   -moz-transition: all 200ms ease-in-out;
   -ms-transition: all 200ms ease-in-out;
@@ -572,7 +588,7 @@ a:hover:before {
   transition: all 200ms ease-in-out;
 }
 a.contact--link:hover:before {
-  background-color: #d2dbd8;
+  background-color: #ffffff;
   height: 8px;
   transform: translateY(0px);
   -webkit-transition: all 200ms ease-in-out;
@@ -582,7 +598,8 @@ a.contact--link:hover:before {
   transition: all 200ms ease-in-out;
 }
 a.nav--link:hover:before {
-  background-color: #efd5a2;
+/*  background-color: #efd5a2;*/
+  background-color: #f6e4da;
   height: 8px;
   transform: translateY(0px);
   -webkit-transition: all 200ms ease-in-out;
@@ -608,6 +625,12 @@ a:before {
   transition: all 200ms ease-in-out;
 }
 
+.nav--link {
+  font-size: 13px;
+  letter-spacing: .5px;
+  font-weight: bold;
+}
+
 .nav > li > a {
   font-style: normal;
   padding-bottom: 0px;
@@ -621,4 +644,26 @@ a:before {
 p.company, p.position {
   font-size: 14px;
   line-height: 17px;
+}
+
+.breakquote {
+/*  padding-top: 50px;*/
+  padding-bottom: 20px;
+  background-color: #f6e4da;
+}
+
+.breakquote h3 {
+  margin-top: 0px;
+}
+
+p.contact-p {
+  margin: 0px;
+}
+
+.container.quote {
+  margin-top: 35px;
+}
+
+p.attr {
+  font-size: 12px;
 }
